@@ -1,6 +1,12 @@
 # ChangeLog for app-editors/emact
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/emact/ChangeLog,v 1.10 2008/05/01 08:49:04 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/emact/ChangeLog,v 1.11 2008/07/30 10:28:09 ulm Exp $
+
+*emact-2.53.0 (30 Jul 2008)
+
+  30 Jul 2008; Ulrich Mueller <ulm@gentoo.org> -emact-2.50.0.ebuild,
+  +emact-2.53.0.ebuild:
+  Version bump. Remove old.
 
   01 May 2008; Christian Faulhammer <opfer@gentoo.org> emact-2.52.0.ebuild:
   stable x86/amd64, bug 217943
